feat: delete account-books
