# internal/services/accountBooks/presentation/controller.go
@@ -6,8 +6,10 @@ import (
 	"banana-account-book.com/internal/libs/validate"
 	"banana-account-book.com/internal/services/accountBooks/application"
 	"banana-account-book.com/internal/services/accountBooks/dto"
-	"banana-account-book.com/internal/services/users/domain"
+	roleModel "banana-account-book.com/internal/services/roles/domain"
+	userModel "banana-account-book.com/internal/services/users/domain"
 	"github.com/gofiber/fiber/v2"
+	"github.com/google/uuid"
 )
 
 type AccountBookController struct {
@@ -22,6 +24,7 @@ func NewAccountBookController(accountBookService *application.AccountBookService
 
 func (c *AccountBookController) Route(r fiber.Router) {
 	r.Post("/", c.add)
+	r.Delete("/:id", c.delete)
 }
 
 // @Summary 가계부 생성
@@ -38,7 +41,7 @@ func (c *AccountBookController) Route(r fiber.Router) {
 func (c *AccountBookController) add(ctx *fiber.Ctx) error {
 	// 1. ctx destructuring
 	var body dto.AddAccountBookRequestBody
-	user := ctx.Locals("user").(*domain.User)
+	user := ctx.Locals("user").(*userModel.User)
 
 	if err := ctx.BodyParser(&body); err != nil {
 		return appError.Wrap(err)
@@ -54,4 +57,31 @@ func (c *AccountBookController) add(ctx *fiber.Ctx) error {
 	}
 
 	return ctx.Status(httpCode.Created.Code).SendString("created")
+}
+
+// @Summary 가계부 삭제
+// @Description 로그인 한 사용자의 가계부를 삭제한다.
+// @Tags accountBooks
+// @Accept json
+// @Produce json
+// @Param id path string true "Account Book ID" format(uuid)
+// @Success 200 {object} map[string]string "{"data": "success"}"
+// @Failure 400 {object} appError.ErrorResponse "Bad Request"
+// @Failure 401 {object} appError.ErrorResponse "Unauthorized"
+// @Failure 403 {object} appError.ErrorResponse "Forbidden"
+// @Failure 404 {object} appError.ErrorResponse "Not Found"
+// @Failure 500 {object} appError.ErrorResponse "Internal Server Error"
+// @Security BearerAuth
+// @Router /account-books/{id} [delete]
+func (c *AccountBookController) delete(ctx *fiber.Ctx) error {
+	// 1. ctx destructuring
+	roles := ctx.Locals("roles").([]*roleModel.Role)
+	accountBookId := ctx.Params("id")
+
+	// 2. call application service method
+	if err := c.accountBookService.Delete(roles, uuid.MustParse(accountBookId)); err != nil {
+		return appError.Wrap(err)
+	}
+
+	return ctx.Status(httpCode.Ok.Code).JSON(fiber.Map{"data": "success"})
 }
